--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,10 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #000;
+  background-color: #fff;
+}
+[data-theme="dark"] body {
+  color: #fff;
+  background-color: #000;
 }
