Added dark mode and enhanced ui

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+[data-theme="light"] {
+  --font-color: yellow;
+  --bg: #fff;
+}
+[data-theme="dark"] {
+  --font-color: green;
+  --bg: #000;
 }
 
-[data-theme="dark"] body {
-  color: #000;
-  background-color: #fff;
+body {
+  color: var(--font-color);
+  background-color: var(--bg);
 }
-/* [data-theme="dark"] body {
-  color: #fff;
-  background-color: #000;
-} */
-
